--- a/css/styles.css
+++ b/css/styles.css
@@ -31,33 +31,37 @@ section{
     justify-content: center;
     width: 80%;
     border-radius: 77px;
-    box-shadow: 6px 14px 34px 1px #282727;
 }
 .skills{
     display: flex;
     flex-direction: column;
-    padding: 16px 0px;
+	padding: 16px 0px;
+	color: #282727;
     
 }
 
 .skill-imgs{
     height: 100px;
     width: 100px;
-    padding: 5px 7px;
-    margin: 4px 20px;
+	padding: 5px 7px;
+	background-color: #282727;
+	margin: 4px 20px;
+	
 }
 
 .icons{
    
     display:flex;
     flex-direction: row;
-    margin: 4px;
+	margin: 4px;
+	background-color: black;
 }
 
 .skills hr{
-    color: black;
+    background-color: black;
     width: 60%;
-    margin: 14px;
+	margin: 14px;
+	
 }
 
 
