--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 html, body{
 	font-size:16px;
-	color: #dfdfdf;
+	color:whitesmoke;
 	background-color: #063647; 
 }
 
@@ -20,6 +20,7 @@ section{
 	padding: 1rem 0;
 	color:whitesmoke;
 	word-spacing: 10px;
+	
 }
 .containers{
     display: flex;
@@ -44,7 +45,7 @@ section{
     height: 100px;
     width: 100px;
 	padding: 5px 7px;
-	background-color: #282727;
+	background-color: black;
 	margin: 4px 20px;
 	
 }
@@ -63,6 +64,22 @@ section{
 	margin: 14px;
 	
 }
+.card{
+  
+    font-size: 23px;
+    color:whitesmoke;
+    width: 85%;
+    height: auto;
+    text-align: center;
+    margin: 10px;
+	padding: 13px;
+	display: flex;
+	background-color: black;
+    flex-direction: column;
+    align-items: center;
+
+
+}
 
 
 a.nav-item {
@@ -70,7 +87,10 @@ a.nav-item {
 }
 
 a.nav-item:hover {
-	color: rgba(255, 255, 255, 0.801);
+	color: whitesmoke;
+}
+a.nav-items:hover {
+	color: whitesmoke;
 }
 
 .avatar{
