--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,8 @@ section{
     display:flex;
     flex-direction: row;
 	margin: 4px;
+	flex-wrap:wrap
+	;
 	background-color: black;
 }
 
@@ -124,6 +126,7 @@ a.nav-items:hover {
 .intro {
 	text-align: justify;
 	width: 80%;
+	flex-wrap: initial;
 	margin: 0 auto;
 	font-family: cursive;
 
